--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <p>Play rock, paper, scissors!</p>
     <div class="row">
         <div class="column">
-            <h4>You pick...</h4>
+            <h4 id="userpick">You pick...</h4>
             <button onclick="playGame('rock')">Rock</button>
             <button onclick="playGame('paper')">Paper</button>
             <button onclick="playGame('scissors')">Scissors</button>
             <br>
         </div>
         <div class="column">
-            <h4>The computer picks...</h4>
+            <h4 id="comppick">The computer picks...</h4>
             <br>
         </div>
     </div>
