Add empty userimg + compimg

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="row">
         <div class="column">
             <h4 id="userpick">You pick...</h4>
+            <img id="userimg" class="center" height="100px"></img>
             <button onclick="playGame('rock')">Rock</button>
             <button onclick="playGame('paper')">Paper</button>
             <button onclick="playGame('scissors')">Scissors</button>
@@ -20,6 +21,7 @@
         </div>
         <div class="column">
             <h4 id="comppick">The computer picks...</h4>
+            <img id="compimg" class="center" height="100px"></img>
             <br>
         </div>
     </div>
